# university

./: .gitignore  README.md
0_bachelor/: README.md
1_fossgis/: README.md
1_ipi/: README.md  binomial.cc  main1.cpp  main5.cpp  main7.1.cpp  main8.1.cpp  main8.2.cpp
1_practical_informatics/: binomial_fast.cc  main2.cpp  main4.cpp  main6.3.cpp  main6.4.cpp
2_4eu+/: README.md
2_adv_geo/: README.md
2_adv_geo/final_project/: .gitignore  .pre-commit-config.yaml  README.md  assignment.md  environment.yml  pyproject.toml
2_adv_geo/final_project/src/: main.py  research_questions.ipynb  research_questions_code.ipynb
2_adv_geo/final_project/src/assets/: logging_config.json
2_adv_geo/final_project/src/network_analysis/: __init__.py  centrality.py  file_manager.py  graph.py  population.py  utils.py
2_adv_geo/final_project/src/tests/: __init__.py  test_centrality.py  test_file_manager.py  test_population.py  test_utils.py
2_geodatenbanken/: README.md  u10_kolaxidis_nikolaos_code.sql  u2_kolaxidis_nikolaos_code.sql  u3_kolaxidis_nikolaos_code.sql  u5_kolaxidis_nikolaos_code.sql  u9_nikolaos_kolaxidis_code.sql
2_geoscripting/: Feedbacktest.ipynb  README.md  dem_change.ipynb  recap2022.ipynb
2_timeToTakeAction/: README.md  presentation.pptx
3_3d_comrec/: README.md  link to file.md
3_lidar/: README.md
3_osm-analyses/: README.md  start_courseBook.bat
3_remote_sensing/: .RData  .Rhistory  (+2 more)
4_adv_geo/random-rectangles/: README.md  pyproject.toml
4_adv_geo/random-rectangles/docs/: precommit.md
4_adv_geo/random-rectangles/src/tests/: test_integration.py
(+496 files in other folders)
