[tool.poetry]
name = "advgeo"
version = "0.1.1"
description = "Manages the dependencies of the Advanced Geoscripting Network Analysis project"
authors = ["Niko Kolaxidis <pd281@uni-heidelberg.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
osmnx = "^1.7.1"
rasterio = "^1.3.9"
matplotlib = "^3.8.2"
seaborn = "^0.12.2"
alive-progress = "^3.1.5"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
mapclassify = "^2.6.1"
folium = "^0.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
